tests/fixtures/invalid/bytes_in_str.py
# Cannot use 'in' with Bytes and Str
x: bool = b"hello" in "hello"
